MosipNexus/Server/k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mosip-nexus
  labels:
    app.kubernetes.io/name: mosip-nexus
