MosipNexus/Server/k8s/04-service-api.yaml
apiVersion: v1
kind: Service
metadata:
  name: nexus-api
  namespace: mosip-nexus
spec:
  selector:
    app: nexus-api
  ports:
    - name: http
      port: 8000
      targetPort: 8000
